adds compression to css files

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,3 +5,11 @@ body {
   font: 100% $font-stack;
   color: $primary-color;
 }
+main {
+    font: 100% $font-stack;
+    color: $primary-color;
+}
+h1 {
+    font: 100% $font-stack;
+    color: $primary-color;
+}
