adds browser sync to gulpfile and html watch task

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,6 +4,7 @@ $primary-color: #333;
 body {
   font: 100% $font-stack;
   color: $primary-color;
+  background: brown;
 }
 main {
     font: 100% $font-stack;
