plays with waves to make wave background

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,46 +1,46 @@
 $font-stack:    Helvetica, sans-serif;
 $primary-color: #333;
 
-body {
-  font: 100% $font-stack;
-  color: $primary-color;
-  background: red;
-}
-main {
-    font: 100% $font-stack;
-    color: $primary-color;
-}
-h1 {
-    font: 100% $font-stack;
-    color: $primary-color;
-}
+// body {
+//   font: 100% $font-stack;
+//   color: $primary-color;
+//   background: red;
+// }
+// main {
+//     font: 100% $font-stack;
+//     color: $primary-color;
+// }
+// h1 {
+//     font: 100% $font-stack;
+//     color: $primary-color;
+// }
 
 html, body {
     height: 100%;
-  }
+}
   
-  html {
+html {
     background: #eee;
-  }
+}
   
-  body {
+body {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
   
-  .box {
-    width: 300px;
-    height: 300px;
+.box {
+    width: 100%;
+    height: 100%;
     border-radius: 5px;
-    box-shadow: 0 2px 30px rgba(black, .2);
-    background: lighten(#f0f4c3, 10%);
-    position: relative;
+    // box-shadow: 0 2px 30px rgba(black, .2);
+    // background: lighten(#f0f4c3, 10%);
+    // position: relative;
     overflow: hidden;
     transform: translate3d(0, 0, 0);
-  }
+}
   
-  .wave {
+.wave {
     opacity: .4;
     position: absolute;
     top: 3%;
@@ -53,31 +53,46 @@ html, body {
     transform-origin: 50% 48%;
     border-radius: 43%;
     animation: drift 3000ms infinite linear;
-  }
+    opacity: 10;
+}
   
-  .wave.-three {
+.wave.-three {
     animation: drift 5000ms infinite linear;
-  }
+    left: 0%;
+    opacity: 10;
+}
   
-  .wave.-two {
+.wave.-two {
     animation: drift 7000ms infinite linear;
-    opacity: .1;
-    background: yellow;
-  }
+    opacity: 10;
+    left: 100%;
+}
+
+.wave.-four {
+    animation: drift 5000ms infinite linear;
+    left: 25%;
+    opacity: 10;
+}
   
-  .box:after {
+.wave.-five {
+    animation: drift 7000ms infinite linear;
+    opacity: 10;
+    left: 75%;
+}
+  
+.box:after {
     content: '';
     display: block;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, rgba(#e8a, 1), rgba(#def, 0) 80%, rgba(white, .5));
+    height: 50%;
+    background: linear-gradient(to bottom, rgba(#f4bf1a, 1), rgba(#def, 0) 80%, rgba(white, .5));
     z-index: 11;
     transform: translate3d(0, 0, 0);
-  }
+}
   
-  .title {
+.title {
     position: absolute;
     left: 0;
     top: 0;
@@ -93,8 +108,8 @@ html, body {
     font-size: 24px;
     text-shadow: 0 1px 0 rgba(black, .1);
     text-indent: .3em;
-  }
-  @keyframes drift {
+}
+@keyframes drift {
     from { transform: rotate(0deg); }
     from { transform: rotate(360deg); }
-  }
+}
