--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -87,7 +87,7 @@ body {
     top: 0;
     width: 100%;
     height: 50%;
-    background: linear-gradient(to bottom, rgba(#f4bf1a, 1), rgba(#def, 0) 80%, rgba(white, .5));
+    background: linear-gradient(to bottom, rgba(#f4bf1aa, 1), rgba(#def, 0) 80%, rgba(white, .5));
     z-index: 11;
     transform: translate3d(0, 0, 0);
 }
