fills in project info and adds pictures

--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -10,6 +10,11 @@
     background-color: transparent;
 }
 
+/* MAIN */
+/* .card {
+    max-width: 33.33%;
+} */
+
 /* HEADER */
 .container a {
     text-decoration: none;
