spaces out icons on navbar

--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -40,6 +40,10 @@
 
 /* NAVBAR */
 .icons {
-    float: left;
-    border: 2px solid green
+    min-width: 15%;
+}
+
+#icon-div {
+    display: flex;
+    flex-grow: 1;
 }
