--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -40,10 +40,11 @@
 
 /* NAVBAR */
 .icons {
-    min-width: 15%;
+    
 }
 
-#icon-div {
+#icon-container {
+    width: 33%;
     display: flex;
-    flex-grow: 1;
+    justify-content: space-around
 }
