centers ul and li items with icons

--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -50,3 +50,24 @@
 }
 
 /* ABOUT */
+.list-icon {
+    font-size: 2em;
+}
+
+.icon-list-item {
+    line-height: 40px;
+    text-align: center;
+    margin-left: 1em;
+}
+
+#flex-list {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    display: inline-block;
+
+}
+
+#icon-ul-div {
+    text-align: center;
+}
