adds centering and font resizing for elements in portfolio squares

--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -73,6 +73,17 @@
 }
 
 /* PORTFOLIO */
+
+.portfolio-title {
+    position: absolute;
+    font-size: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
 .portfolio-overlay {
     position: absolute;
     top: 0;
@@ -90,9 +101,8 @@
     opacity: 1;
 }
 
-.text {
+.portfolio-overlay-info {
     color: white;
-    font-size: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
