--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -24,15 +24,24 @@ body, html {
     text-align: center
 }
 
-.hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("https://codetheweb.blog/assets/img/posts/full-image-hero/image.jpg");
+.hero {
     width: 100vw;
     height: 100vh;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    margin-bottom: 2rem;
+}
+
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("https://www.fabtechexpo.com/wp-content/uploads/atlanta-skyline-compressor.jpg");
+    width: 100vw;
+    height: 100vh;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    /* margin-bottom: 2rem; */
     position: relative;
     display: flex;
     justify-content: center;
@@ -53,6 +62,7 @@ body, html {
 
 .header-div {
     text-align: center;
+    padding: 2rem 1rem;
 }
 
 .header-text {
@@ -60,10 +70,17 @@ body, html {
     color: white
 }
 
+@media (min-width: 576px) {
+    .header-div {
+        padding: 4rem 2rem;
+    }
+}
+
+
 /* FOOTER */
 #footer {
     min-height: 100px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     position: relative;
     bottom: 0;
     width: 100%;
