adds animation for about list items to slide in from both sides

--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -172,11 +172,11 @@ body, html {
 }
 
 .left {
-    transform: translate(-355%)
+    transform: translate(-900px)
 }
 
 .right {
-    transform: translate(355%)
+    transform: translate(900px)
 }
 
 /* PORTFOLIO */
