--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -220,4 +220,10 @@ body, html {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     text-align: center;
-  }
+}
+
+@media (max-width: 830px) {
+    .card-text {
+        font-size: 12px
+    }
+}
