--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -123,6 +123,11 @@ body, html {
 }
 
 /* ABOUT */
+
+#about {
+    position: relative
+}
+
 .list-icon {
     font-size: 2em;
 }
@@ -225,5 +230,68 @@ body, html {
 @media (max-width: 830px) {
     .card-text {
         font-size: 12px
+    }
+}
+
+#scroll-down a {
+    padding-top: 70px;
+}
+#scroll-down a span {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: arrow 1.5s infinite;
+    animation: arrow 1.5s infinite;
+    box-sizing: border-box;
+}
+#scroll-down-black a {
+    padding-top: 70px;
+}
+#scroll-down-black a span {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: arrow 1.5s infinite;
+    animation: arrow 1.5s infinite;
+    box-sizing: border-box;
+}
+@-webkit-keyframes arrow {
+    0% {
+        -webkit-transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
+    }
+}
+@keyframes arrow {
+    0% {
+        transform: rotate(-45deg) translate(0, 0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        transform: rotate(-45deg) translate(-20px, 20px);
+        opacity: 0;
     }
 }
