adds small scaling to brand icons when hovered

--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -110,6 +110,14 @@ body, html {
     color: white
 }
 
+.icons { 
+    transition: all .2s ease-in-out; 
+}
+
+.icons:hover { 
+    transform: scale(1.1); 
+}
+
 .navbar-toggler .navbar-toggler-icon {
     color: white
 }
