--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -218,7 +218,7 @@ body, html {
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: #008CBA;
+    background-color: black;
 }
 
 .portfolio-container:hover .portfolio-overlay {
