--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -55,13 +55,11 @@ body, html {
     .hero {
         margin-bottom: 120px;
     }
-}
-
-@media (max-width: 576px) {
     .hero-image {
-        background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('http://s3.amazonaws.com/medias.photodeck.com/7cf45a8b-88e8-4397-997f-6f695d6a9a63/nyc-620_uxga.jpg') no-repeat center top;
+        background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://images.unsplash.com/photo-1513590206374-e21cff70d84b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c671783ea3a3a81790c6db5cf60e45a0&auto=format&fit=crop&w=2766&q=80');
     }
 }
+
 
 /*================================ HEADER ================================*/
 #header-container a {
