--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -29,7 +29,7 @@ body, html {
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("https://images.unsplash.com/photo-1513590206374-e21cff70d84b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c671783ea3a3a81790c6db5cf60e45a0&auto=format&fit=crop&w=2766&q=80");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("../../images/beach-min.jpeg");
     width: 100vw;
     height: 100vh;
     background-position: center center;
