--- a/client/src/pages/Main/Main.css
+++ b/client/src/pages/Main/Main.css
@@ -29,7 +29,7 @@ body, html {
 }
 
 .hero-image {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("/images/beach-min.jpeg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url("/images/beach-min.jpg");
     width: 100vw;
     height: 100vh;
     background-position: center center;
